# FrugCpp

./: .gitignore  .gitmodules  LICENSE  README.md
Deduction_des_types_des_parametres/code/src/: fonctionsConteneur.hpp  iterateurFoncteur.hpp  main.cpp
Deduction_des_types_des_parametres/code_demo/: iterator.cpp
Deduction_des_types_des_parametres/presentation/: note.tex
bench_conteneur/code/: CMakeLists.txt  for_record_tuple.hpp  less_make.sh  make_here.sh
bench_conteneur/code/src/: insertion_bench.hpp  lecture_bench.hpp  main.cpp  outil_bench.hpp  vector_bench.hpp
bench_conteneur/graphes/insert/: insert_lineaire_gnu_plot  insert_lineaire_log  insert_lineaire_log_gnu_plot  insert_vectorlineaire  insert_vectorlineaire_gnu_plot  insert_vectorlineaire_log_gnu_plot
bench_conteneur/graphes/vector/: lecture_vector_lecture_gnu_plot  lecture_vector_lecture_log  lecture_vector_lecture_log_gnu_plot
code/: CMakeLists.txt  demoFrug  make_here.sh
code/src/: can_be_check.hpp  iterateurFoncteur.hpp  main.cpp  paramInfo.hpp  type_traits.hpp
code_demo/: iterator.cpp  makefile  sfinae  sfinae.cpp  traits  traits.cpp
code_demo/classe_spécialisation/: main.cpp
conteneur/code/: CMakeLists.txt  exe
conteneur/code/src/: main.cpp
presentation/: FoncteurIterator.cpp  clear  deduction_type_param.tex  note.tex  paramInfo.hpp  type_pram.tex
type_deduction/code/: demoFrug
type_deduction/code/src/: illegalArgumentError.hpp
type_deduction/presentation/: clear  mise_en_page_globale.tex
